--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   </head>
   <body>
 
-  
+    <div class="container">
+    <img src="bot.png" alt="Avatar" style="width:100%;">
+    <p>Meow meow. Meow?</p>
+    <span class="time-right">11:00</span>
+  </div>
+
+  <div class="container darker input-box">
+    <input type="text" id="msg" placeholder="Type message here...">
+    <button id="submit" onclick="send()">Send</button>
+  </div>
+
 
 </body></html>
