--- a/index.html
+++ b/index.html
@@ -3,21 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>JavaScript Chatbot</title>
+    <title>Therapet</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      id="favicon"
-      rel="icon"
-      href="https://glitch.com/edit/favicon.ico"
-      type="image/x-icon"
-    />
   </head>
   <body>
     <div id="wrapper">
       <div id="chat-area">
         <div id="start-screen">
           <div id="startButton">
-            <div id="robot">
+            <div id="therapet">
               <img
                 src="http://tokyocatspecialists.jp/assets/img/home-cat.png"
               />
@@ -27,13 +21,8 @@
               <div>
                   *
               </div>
-
             </div>
-            <img
-              src="https://cdn.glitch.com/e5ca6c0c-b21f-4a54-a1ad-6285b1bf8390%2Fpointer.png"
-              id="cursor"
-            />
-            or ⏎ to start!
+
           </div>
         </div>
       </div>
@@ -49,13 +38,7 @@
         </div>
       </div>
     </div>
-    <script src="variables.js"></script>
-    <script src="listener.js"></script>
-    <script src="thingsTheBotSays.js"></script>
-    <script src="chatEngine.js"></script>
-    <script src="botChat.js"></script>
-    <script src="userChat.js"></script>
-    <script src="send.js"></script>
+    <script src="sketch.js"></script>
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     <script src="https://button.glitch.me/button.js"></script>
   </body>
