--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
               />
               <div>
               do you need help?
-              </div>
+            </div>
               <div>
-                  *
+                  -
               </div>
+
+              chat with a therapet
             </div>
 
           </div>
@@ -39,7 +41,5 @@
       </div>
     </div>
     <script src="sketch.js"></script>
-    <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
-    <script src="https://button.glitch.me/button.js"></script>
   </body>
 </html>
